[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/font.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/menu/multiplayer/Multiplayer.gd" type="Script" id=2]
[ext_resource path="res://assets/godot_theme/gui.theme" type="Theme" id=3]

[node name="root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_header" type="Label" parent="."]
modulate = Color( 0.313726, 0.356863, 1, 1 )
anchor_left = 0.5
anchor_right = 0.5
margin_left = -122.5
margin_top = 174.0
margin_right = 122.5
margin_bottom = 39.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
custom_fonts/font = ExtResource( 1 )
text = "Multiplayer"
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ctrl_group" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_join" type="Button" parent="ctrl_group"]
margin_left = 320.0
margin_top = 384.0
margin_right = 488.0
margin_bottom = 436.0
theme = ExtResource( 3 )

[node name="lbl_join" type="Label" parent="ctrl_group/btn_join"]
modulate = Color( 0.545098, 0.701961, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 6.0
theme = ExtResource( 3 )
text = "Create"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_create" type="Button" parent="ctrl_group"]
margin_left = 536.0
margin_top = 384.0
margin_right = 704.0
margin_bottom = 436.0
theme = ExtResource( 3 )

[node name="lbl_create" type="Label" parent="ctrl_group/btn_create"]
modulate = Color( 0.545098, 0.701961, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 6.0
theme = ExtResource( 3 )
text = "Join"
align = 1
valign = 1

[node name="txt_name" type="LineEdit" parent="ctrl_group"]
margin_left = 320.0
margin_top = 280.0
margin_right = 704.0
margin_bottom = 344.0
theme = ExtResource( 3 )
align = 1
max_length = 16
placeholder_text = "Enter your Name"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="ctrl_group/btn_join" to="ctrl_group" method="_on_btn_join_button_up"]
[connection signal="button_up" from="ctrl_group/btn_create" to="ctrl_group" method="_on_btn_create_button_up"]
[connection signal="text_changed" from="ctrl_group/txt_name" to="ctrl_group" method="_on_txt_name_text_changed"]
